--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,13 +3,20 @@ Type: Package
 Title: Cleaned and combined YRBS 2017, 2019 and 2021 data exploring Alcohol Use
 Version: 0.1.0
 Author: 
-    person(
+    c(person(
         given  = "Catalina",
         family = "Cañizares", 
         email = "ccani007@fiu.edu", 
         role = c("aut", "cre"),
         comment = c(ORCID = "0000-0002-6854-5205")
-      )
+      ), 
+      person(
+        given  = "Francisco",
+        family = "Cardozo", 
+        email = "foc9@miami.edu", 
+        role = c("aut", "cre"),
+        comment = c(ORCID = "0000-0002-1925-4954")
+      ))
 Maintainer: Catalina Canizares <ccani007@fiu.edu>
 Description: This package has been developed specifically for conducting a 
      ggplot workshop at the Social Work & Welfare Research (SWWR) 2024 
@@ -24,5 +31,10 @@ RoxygenNote: 7.2.3
 License: CC0
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown, 
+    gtExtras, 
+    geomtextpath, 
+    ggrepel,
+    ggplot2, 
+    dplyr
 VignetteBuilder: knitr
