--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,7 @@ Author:
         comment = c(ORCID = "0000-0002-1925-4954")
       )
     )
+Maintainer: Catalina Canizares <ccani007@fiu.edu>
 Description: This package has been developed specifically for conducting a 
      ggplot workshop at the Social Work & Welfare Research (SWWR) 2024 
      conference. The workshop is tailored to meet the needs of social workers,
